--- a/FuzzyLogicTool/FuzzyLogicTool.vcxproj.filters
+++ b/FuzzyLogicTool/FuzzyLogicTool.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="LogicHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DescriptionInputs.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FuzzySet.h">
@@ -120,6 +123,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="LogicHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DescriptionInputs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
