--- a/FuzzyLogicTool/FuzzyLogicTool.vcxproj.filters
+++ b/FuzzyLogicTool/FuzzyLogicTool.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="ReviewPanel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GraphFunctionCalculator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FuzzySet.h">
@@ -132,6 +135,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ReviewPanel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GraphFunctionCalculator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
