--- a/FuzzyLogicTool/FuzzyLogicTool.vcxproj
+++ b/FuzzyLogicTool/FuzzyLogicTool.vcxproj
@@ -150,7 +150,9 @@
     <ClCompile Include="DescriptionInputs.cpp" />
     <ClCompile Include="FuzzyLogicTool.cpp" />
     <ClCompile Include="FuzzySet.cpp" />
+    <ClCompile Include="GraphDisplay.cpp" />
     <ClCompile Include="GraphFunctionCalculator.cpp" />
+    <ClCompile Include="GraphingTool.cpp" />
     <ClCompile Include="imgui\imgui-SFML.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
@@ -169,7 +171,9 @@
     <ClInclude Include="DemoWindow.h" />
     <ClInclude Include="DescriptionInputs.h" />
     <ClInclude Include="FuzzySet.h" />
+    <ClInclude Include="GraphDisplay.h" />
     <ClInclude Include="GraphFunctionCalculator.h" />
+    <ClInclude Include="GraphingTool.h" />
     <ClInclude Include="imgui\imconfig-SFML.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui-SFML.h" />
