setting up input page

--- a/FuzzyLogicTool/FuzzyLogicTool.vcxproj.filters
+++ b/FuzzyLogicTool/FuzzyLogicTool.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="GraphDisplay.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InputPanel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FuzzySet.h">
@@ -150,6 +153,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GraphDisplay.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InputPanel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
