--- a/FuzzyLogicTool/FuzzyLogicTool.vcxproj
+++ b/FuzzyLogicTool/FuzzyLogicTool.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="InputPanel.cpp" />
     <ClCompile Include="LogicHandler.cpp" />
     <ClCompile Include="Operation.cpp" />
     <ClCompile Include="ReviewPanel.cpp" />
@@ -185,6 +186,7 @@
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="InputManager.h" />
+    <ClInclude Include="InputPanel.h" />
     <ClInclude Include="LogicHandler.h" />
     <ClInclude Include="Operation.h" />
     <ClInclude Include="ReviewPanel.h" />
