--- a/FuzzyLogicTool/FuzzyLogicTool.vcxproj
+++ b/FuzzyLogicTool/FuzzyLogicTool.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="DefuzzyCalculator.cpp" />
     <ClCompile Include="DemoWindow.cpp" />
     <ClCompile Include="DescriptionInputs.cpp" />
+    <ClCompile Include="FinalGraphTool.cpp" />
     <ClCompile Include="FuzzyLogicTool.cpp" />
     <ClCompile Include="FuzzySet.cpp" />
     <ClCompile Include="GraphDisplay.cpp" />
@@ -174,6 +175,7 @@
     <ClInclude Include="DefuzzyCalculator.h" />
     <ClInclude Include="DemoWindow.h" />
     <ClInclude Include="DescriptionInputs.h" />
+    <ClInclude Include="FinalGraphTool.h" />
     <ClInclude Include="FuzzySet.h" />
     <ClInclude Include="GraphDisplay.h" />
     <ClInclude Include="GraphFunctionCalculator.h" />
