--- a/FuzzyLogicTool/FuzzyLogicTool.vcxproj.filters
+++ b/FuzzyLogicTool/FuzzyLogicTool.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="ImguiHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EditPanel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FuzzySet.h">
@@ -180,6 +183,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ImguiHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EditPanel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
